--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -1,54 +1,51 @@
+server {
+    listen       80;
+    listen  [::]:80;
+    server_name  localhost;
 
-    server {
-		listen       80;
-		listen  [::]:80;
-		server_name  localhost;
+    access_log  /var/log/nginx/wp.access.log;
+    error_log   /var/log/nginx/wp.error.log;
 
-		#access_log  /var/log/nginx/host.access.log  main;
-		
-		index index.php; 
+	root /var/www/html;
+    index index.php; 
 
-  		location / {
-		    try_files $uri $uri/ /index.php?$args;
-		  }
+    location / {
+        try_files $uri $uri/ /index.php?$args;
+    }
 
-		 rewrite /wp-admin$ $scheme://$host$uri/ permanent;
+    rewrite /wp-admin$ $scheme://$host$uri/ permanent;
 
-		 location ~ [^/]\.php(/|$) { 
-		    fastcgi_split_path_info ^(.+?\.php)(/.*)$;
-		    if (!-f $document_root$fastcgi_script_name) {
-		      return 404;
-		    }
+    location ~ \.php$ {
+		try_files $uri =404;
+		fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass   wordpress:9000;
+        fastcgi_index  index.php; 
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO       $fastcgi_path_info;
+        fastcgi_param PATH_TRANSLATED $document_root$fastcgi_path_info;
+    } 
 
-		    include fastcgi_params;
-		    fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-		    fastcgi_param PATH_INFO       $fastcgi_path_info;
-		    fastcgi_param PATH_TRANSLATED $document_root$fastcgi_path_info;
+    # proxy the PHP scripts to Apache listening on 127.0.0.1:80
+    #
+    #location ~ \.php$ {
+    #    proxy_pass   http://127.0.0.1;
+    #}
 
-		    fastcgi_pass   wordpress:9000;
-		    fastcgi_index  index.php; 
-		  } 
+    # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
+    #
+    #location ~ \.php$ {
+    #    root           html;
+    #    fastcgi_pass   127.0.0.1:9000;
+    #    fastcgi_index  index.php;
+    #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
+    #    include        fastcgi_params;
+    #}
 
-		# proxy the PHP scripts to Apache listening on 127.0.0.1:80
-		#
-		#location ~ \.php$ {
-		#    proxy_pass   http://127.0.0.1;
-		#}
-
-		# pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-		#
-		#location ~ \.php$ {
-		#    root           html;
-		#    fastcgi_pass   127.0.0.1:9000;
-		#    fastcgi_index  index.php;
-		#    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-		#    include        fastcgi_params;
-		#}
-
-		# deny access to .htaccess files, if Apache's document root
-		# concurs with nginx's one
-		#
-		#location ~ /\.ht {
-		#    deny  all;
-		#}
-	}
+    # deny access to .htaccess files, if Apache's document root
+    # concurs with nginx's one
+    #
+    #location ~ /\.ht {
+    #    deny  all;
+    #}
+}
