--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -1,7 +1,10 @@
 server {
-    listen       80;
-    listen  [::]:80;
-    server_name  localhost;
+    listen 				443 ssl;
+	server_name			skoulen.42.fr;
+	ssl_certificate		/etc/nginx/certs/skoulen.42.fr.crt;
+	ssl_certificate_key	/etc/nginx/certs/skoulen.42.fr.key;
+	ssl_protocols		TLSv1.2 TLSv1.3;
+	ssl_certificate_key	HIGH:!aNULL:!MD5;
 
     access_log  /var/log/nginx/wp.access.log;
     error_log   /var/log/nginx/wp.error.log;
