--- a/srcs/requirements/nginx/conf/default.conf.template
+++ b/srcs/requirements/nginx/conf/default.conf.template
@@ -1,12 +1,12 @@
-#replace localhost with domain name
+#replace DOMAIN with domain name
 server {
-	server_name			localhost;
+	server_name			DOMAIN;
     
 	listen 				443 ssl;
 	listen				[::]:443 ssl;
 	
-	ssl_certificate		/etc/nginx/certs/localhost.crt;
-	ssl_certificate_key	/etc/nginx/certs/localhost.key;
+	ssl_certificate		/etc/nginx/certs/DOMAIN.crt;
+	ssl_certificate_key	/etc/nginx/certs/DOMAIN.key;
 	ssl_protocols		TLSv1.2 TLSv1.3;
 	ssl_certificate_key	HIGH:!aNULL:!MD5;
 
