--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -1,12 +1,12 @@
-#replace localhost with domain name
+#replace skoulen.42.fr with domain name
 server {
-	server_name			localhost;
+	server_name			skoulen.42.fr;
     
 	listen 				443 ssl;
 	listen				[::]:443 ssl;
 	
-	ssl_certificate		/etc/nginx/certs/localhost.crt;
-	ssl_certificate_key	/etc/nginx/certs/localhost.key;
+	ssl_certificate		/etc/nginx/certs/skoulen.42.fr.crt;
+	ssl_certificate_key	/etc/nginx/certs/skoulen.42.fr.key;
 	ssl_protocols		TLSv1.2 TLSv1.3;
 	ssl_certificate_key	HIGH:!aNULL:!MD5;
 
