--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,3 +1,3 @@
 FROM nginx
-COPY srcs/requirements/nginx/conf/ /etc/nginx/conf.d
+COPY srcs/requirements/nginx/conf/default.conf /etc/nginx/conf.d
 COPY .secrets/certs/ /etc/nginx/certs
