script to install wp-cli but not managing to automate creation of users

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -27,6 +27,8 @@ services:
       - wordpress:/var/www/html
     networks:
       - website
+    depends_on:
+      - mariadb
   
   mariadb:
     build:
