started changing wordpress dockerfile to alpine dockerfile but not much is working yet

--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,5 +1,9 @@
-FROM wordpress:fpm
+FROM alpine
+
+RUN apk update && apk add bash && apk add curl && apk add php
 
 COPY srcs/requirements/wordpress/tools/install-wp-cli.sh /
 
-RUN /install-wp-cli.sh
+RUN ["/bin/bash", "/install-wp-cli.sh"]
+
+RUN ["/bin/bash", "wp core download"]
