--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,9 +1,28 @@
-FROM alpine
+FROM alpine:3.17
 
-RUN apk update && apk add bash && apk add curl && apk add php
+RUN apk add --no-cache bash curl ca-certificates tzdata zip \
+    libmcrypt-dev zlib-dev gmp-dev \
+    freetype-dev libjpeg-turbo-dev libpng-dev \
+    php81-fpm php81-json php81-zlib php81-xml php81-xmlwriter php81-simplexml php81-pdo php81-phar php81-openssl \
+    php81-pdo_mysql php81-mysqli php81-session \
+    php81-gd php81-iconv php81-gmp php81-zip \
+    php81-curl php81-opcache php81-ctype php81-apcu \
+    php81-intl php81-bcmath php81-dom php81-mbstring php81-xmlreader mysql-client mariadb-client && apk add -u musl && \
+	rm -rf /var/cache/apk/*
 
-COPY srcs/requirements/wordpress/tools/install-wp-cli.sh /
+RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar && \
+	chmod +x wp-cli.phar && \
+	mv wp-cli.phar /usr/local/bin/wp
 
-RUN ["/bin/bash", "/install-wp-cli.sh"]
+RUN mkdir -p /var/www/html &&  wp core download --path=/var/www/html
 
-RUN ["/bin/bash", "wp core download"]
+
+RUN sed -i 's#^listen = 127.0.0.1:9000#listen = 9000#' /etc/php81/php-fpm.d/www.conf
+
+COPY srcs/requirements/wordpress/tools/wp-entrypoint.sh /
+
+ENTRYPOINT ["/wp-entrypoint.sh"]
+
+EXPOSE 9000
+
+CMD ["php-fpm81", "--nodaemonize"]
