--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,3 +1,13 @@
-FROM nginx
-COPY srcs/requirements/nginx/conf/default.conf /etc/nginx/conf.d
+FROM alpine:3.17
+
+RUN apk add --no-cache nginx bash
+
+#copy config file
+COPY srcs/requirements/nginx/conf/default.conf /etc/nginx/http.d/default.conf
+
+#copy SSL certificate
 COPY .secrets/certs/ /etc/nginx/certs
+
+EXPOSE 443
+
+CMD ["nginx", "-g", "daemon off;"]
