--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - wordpress:/var/www/html
     networks:
       - website
-    restart: always
+    restart: on-failure
  
   wordpress:
     build:
@@ -23,7 +23,7 @@ services:
     depends_on:
       - mariadb
     env_file: .env
-    restart: always
+    restart: on-failure
   
   mariadb:
     build:
@@ -38,7 +38,7 @@ services:
       - db:/var/lib/mysql
     networks:
       - website
-    restart: always
+    restart: on-failure
 
 volumes:
   wordpress:
