made some progress on mariadb Dockerfile but wordpress logs says it does not connect to database

--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -2,13 +2,10 @@ FROM alpine:3.17
 
 RUN apk update && apk add mariadb mariadb-client
 
-COPY srcs/requirements/mariadb/conf/mariadb-server.cnf /etc/mysql
-COPY srcs/requirements/mariadb/conf/mariadb-server.cnf /etc/my.cnf
-
 COPY srcs/requirements/mariadb/tools/mariadb-entrypoint.sh /
 
 EXPOSE 3306
 
 ENTRYPOINT ["/mariadb-entrypoint.sh"]
 
-CMD ["mysqld", "--user=root"]
+CMD ["mariadbd", "--user=root"]
