--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -29,11 +29,7 @@ services:
     build:
       context: ..
       dockerfile: srcs/requirements/mariadb/Dockerfile
-    environment:
-      MARIADB_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
-      MARIADB_DATABASE: ${DB_NAME}
-      MARIADB_USER: ${DB_USER}
-      MARIADB_PASSWORD: ${DB_PASSWORD}
+    env_file: .env
     volumes:
       - db:/var/lib/mysql
     networks:
