made entrypoints cleaner by using set -e

--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine:3.17
 
-RUN apk add --no-cache nginx bash
+RUN apk add --no-cache nginx
 
 #copy config file
 COPY srcs/requirements/nginx/conf/default.conf /etc/nginx/http.d/default.conf
@@ -9,5 +9,9 @@ COPY srcs/requirements/nginx/conf/default.conf /etc/nginx/http.d/default.conf
 COPY .secrets/certs/ /etc/nginx/certs
 
 EXPOSE 443
+
+COPY srcs/requirements/nginx/tools/nginx-entrypoint.sh /
+
+ENTRYPOINT ["/nginx-entrypoint.sh"]
 
 CMD ["nginx", "-g", "daemon off;"]
