--- a/srcs/requirements/redis-cache/Dockerfile
+++ b/srcs/requirements/redis-cache/Dockerfile
@@ -1,19 +1,18 @@
 FROM alpine:3.17
 
-RUN apk update && apk add redis
+RUN apk update && apk add redis && apk add redis
 
 EXPOSE 6379
 
 RUN mkdir /etc/redis && \
 	mkdir /var/redis
 
-#COPY srcs/requirements/redis-cache/tools/redis_init_script /etc/init.d/redis_6379
+ARG REDIS_PASSWORD
 
-COPY srcs/requirements/redis-cache/conf/redis.conf /etc/redis/redis.conf
-
-#RUN mkdir /var/redis/6379
-
-#RUN update-rc.d redis_6379 defaults
+RUN wget https://raw.githubusercontent.com/redis/redis/7.0.12/redis.conf && \
+	mv /redis.conf /etc/redis/redis.conf && \
+	sed -i "s/bind 127.0.0.1 -::1/# bind 127.0.0.1 -::1/g" /etc/redis/redis.conf && \	
+	sed -i "s/# requirepass foobared/requirepass $REDIS_PASSWORD/g" /etc/redis/redis.conf
 
 COPY srcs/requirements/redis-cache/tools/redis-entrypoint.sh /
 
