--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -8,10 +8,12 @@ services:
     image: nginx
     ports:
       - "443:443"
+      - "8080:8080"
     volumes:
       - type: bind
         source: ${HOME}/data/wordpress
         target: /var/www/html
+      - adminer_vol:/var/www/adminer
     networks:
       - website
     restart: on-failure
@@ -67,7 +69,6 @@ services:
       context: ..
       dockerfile: srcs/requirements/vsftpd/Dockerfile
     image: vsftpd
-    env_file: .env
     networks:
       - website
     restart: on-failure
@@ -76,5 +77,21 @@ services:
       - "20:20"
       - "5000-5042:5000-5042"
 
+  adminer:
+    container_name: adminer-container
+    build:
+      context: ..
+      dockerfile: srcs/requirements/adminer/Dockerfile
+    image: adminer
+    env_file: .env
+    networks:
+      - website
+    restart: on-failure
+    volumes:
+      - adminer_vol:/var/www/adminer
+
 networks:
   website:
+
+volumes:
+  adminer_vol:
