--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -90,6 +90,17 @@ services:
     volumes:
       - adminer_vol:/var/www/adminer
 
+  static-site:
+    container_name: static-site-container
+    build:
+      context: ..
+      dockerfile: srcs/requirements/static-site/Dockerfile
+    image: static-site
+    env_file: .env
+    restart: on-failure
+    ports:
+      - "8081:8081"
+
 networks:
   website:
 
