--- a/srcs/requirements/vsftpd/conf/vsftpd.conf
+++ b/srcs/requirements/vsftpd/conf/vsftpd.conf
@@ -12,7 +12,7 @@
 anonymous_enable=YES
 #
 # Uncomment this to allow local users to log in.
-#local_enable=YES
+local_enable=YES
 #
 # Uncomment this to enable any form of FTP write command.
 #write_enable=YES
@@ -46,9 +46,15 @@ connect_from_port_20=YES
 #chown_uploads=YES
 #chown_username=whoever
 #
+
+dual_log_enable=yes
+vsftpd_log_file=/var/log/vsftpd/vsftpd.log
+
+log_ftp_protocol=yes
+
 # You may override where the log file goes if you like. The default is shown
 # below.
-#xferlog_file=/var/log/vsftpd.log
+xferlog_file=/var/log/vsftpd/vsftpd.log
 #
 # If you want, you can have your log file in standard ftpd xferlog format.
 # Note that the default log file location is /var/log/xferlog in this case.
@@ -81,7 +87,7 @@ connect_from_port_20=YES
 #ascii_download_enable=YES
 #
 # You may fully customise the login banner string:
-#ftpd_banner=Welcome to blah FTP service.
+ftpd_banner=Welcome to blah FTP service.
 #
 # You may specify a file of disallowed anonymous e-mail addresses. Apparently
 # useful for combatting certain DoS attacks.
@@ -115,4 +121,9 @@ listen=YES
 # sockets, you must run two copies of vsftpd with two configuration files.
 # Make sure, that one of the listen options is commented !!
 #listen_ipv6=YES
+
+# Enable Passive FTP
+pasv_min_port=5000
+pasv_max_port=5042
+
 seccomp_sandbox=no
