--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -3,14 +3,14 @@ FROM alpine:3.17
 RUN apk add --no-cache nginx
 
 #copy config file
-COPY srcs/requirements/nginx/conf/default.conf /etc/nginx/http.d/default.conf
+COPY conf/default.conf /etc/nginx/http.d/default.conf
 
 #copy SSL certificate
-COPY .secrets/certs/ /etc/nginx/certs
+COPY certs/ /etc/nginx/certs
 
 EXPOSE 443 8080
 
-COPY srcs/requirements/nginx/tools/nginx-entrypoint.sh /
+COPY tools/nginx-entrypoint.sh /
 
 ENTRYPOINT ["/nginx-entrypoint.sh"]
 
