--- a/srcs/requirements/vsftpd/conf/vsftpd.conf
+++ b/srcs/requirements/vsftpd/conf/vsftpd.conf
@@ -46,15 +46,9 @@ connect_from_port_20=YES
 #chown_uploads=YES
 #chown_username=whoever
 #
-
-dual_log_enable=yes
-vsftpd_log_file=/var/log/vsftpd/vsftpd.log
-
-log_ftp_protocol=yes
-
 # You may override where the log file goes if you like. The default is shown
 # below.
-xferlog_file=/var/log/vsftpd/vsftpd.log
+#xferlog_file=/var/log/vsftpd.log
 #
 # If you want, you can have your log file in standard ftpd xferlog format.
 # Note that the default log file location is /var/log/xferlog in this case.
@@ -87,7 +81,7 @@ xferlog_file=/var/log/vsftpd/vsftpd.log
 #ascii_download_enable=YES
 #
 # You may fully customise the login banner string:
-ftpd_banner=Welcome to blah FTP service.
+#ftpd_banner=Welcome to blah FTP service.
 #
 # You may specify a file of disallowed anonymous e-mail addresses. Apparently
 # useful for combatting certain DoS attacks.
