--- a/srcs/requirements/vsftpd/conf/vsftpd.conf
+++ b/srcs/requirements/vsftpd/conf/vsftpd.conf
@@ -15,7 +15,7 @@ anonymous_enable=YES
 local_enable=YES
 #
 # Uncomment this to enable any form of FTP write command.
-#write_enable=YES
+write_enable=YES
 #
 # Default umask for local users is 077. You may wish to change this to 022,
 # if your users expect that (022 is used by most other ftpd's)
