--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - "8080:8080"
     volumes:
       - type: bind
-        source: ${HOME}/data/wordpress
+        source: ${WORDPRESS_VOLUME}
         target: /var/www/html
       - adminer_vol:/var/www/adminer
     networks:
@@ -25,7 +25,7 @@ services:
     image: wordpress
     volumes:
       - type: bind
-        source: ${HOME}/data/wordpress
+        source: ${WORDPRESS_VOLUME}
         target: /var/www/html
     networks:
       - website
@@ -42,7 +42,7 @@ services:
     env_file: .env
     volumes:
       - type: bind
-        source: ${HOME}/data/db
+        source: ${DATABASE_VOLUME}
         target: /var/lib/mysql
     networks:
       - website
@@ -70,7 +70,7 @@ services:
     image: vsftpd
     volumes:
       - type: bind
-        source: ${HOME}/data/wordpress
+        source: ${WORDPRESS_VOLUME}
         target: /home/${FTP_USER}/wordpress
     restart: on-failure
     ports:
