--- a/srcs/requirements/static-site/Dockerfile
+++ b/srcs/requirements/static-site/Dockerfile
@@ -1,11 +1,13 @@
 FROM alpine:3.17
 
-RUN apk add --no-cache lighttpd
+RUN apk add --no-cache lighttpd zola
 
 COPY conf/lighttpd.conf /
 
-COPY site/ /var/www/html
+COPY tools/entrypoint.sh /
 
 EXPOSE 8081
+
+ENTRYPOINT ["./entrypoint.sh"]
 
 CMD ["lighttpd", "-D", "-f", "lighttpd.conf"]
