--- a/srcs/requirements/static-site/conf/lighttpd.conf
+++ b/srcs/requirements/static-site/conf/lighttpd.conf
@@ -1,15 +1,15 @@
-server.document-root = "/var/www/zola/public"
+server.document-root = "/var/www/html"
 
 server.port = 8081
 
 mimetype.assign = (
-  ".html" => "text/html", 
+  ".html" => "text/html",
   ".txt" => "text/plain",
   ".jpg" => "image/jpeg",
   ".png" => "image/png",
   ".svg" => "image/svg+xml",
   ".css" => "text/css",
-  ".js" => "text/javascript" 
+  ".js" => "text/javascript"
 )
 
 index-file.names = ( "index.html" )
