permission stuff for wordpress

--- a/srcs/requirements/vsftpd/Dockerfile
+++ b/srcs/requirements/vsftpd/Dockerfile
@@ -13,9 +13,9 @@ ENTRYPOINT ["/vsftpd-entrypoint.sh"]
 ARG FTP_USER
 ARG FTP_PASSWORD
 
-RUN addgroup -S $FTP_USER && \
-	 adduser -S $FTP_USER -G $FTP_USER && \
-	 echo $FTP_USER:$FTP_PASSWORD | chpasswd
+RUN addgroup -g 4242 ftp_group && \ 
+	adduser -S $FTP_USER -G ftp_group && \
+	echo $FTP_USER:$FTP_PASSWORD | chpasswd
 
 CMD ["vsftpd", "/etc/vsftpd/vsftpd.conf", "-ovsftpd_log_file=/proc/1/fd/1"]
 
